Assert adding a driver that uses a single property of a scene ID #61014

Closed
opened 2019-01-30 13:01:59 +01:00 by Philipp Oeser · 7 comments
Member

System Information
Operating system: fedora 29
Graphics card: 970m

Blender Version
Broken: a1ae04d15a
Worked: old dependency graph

Short description of error

Seems like drivers cannot use a scene property.
(spotted while looking into blender/blender-addons#60986 -- Import Images as planes Addon creates a driver using the scenes camera as variable)

Exact steps for others to reproduce the error

with the default scene open:

  • select the cube
  • RMB on any property in the Properties Editor: Add Driver
  • in the following popup: set Driver variable type to Single Property
  • set Type of ID-Block to Scene
  • pick a scene from the list

should assert then (Debug build)

BLI_assert failed: /blender/source/blender/depsgraph/intern/builder/deg_builder_nodes.cc:497, build_id(), at '!"Should never happen"'
there is no such thing as build_scene() for a scene ID, and I am not sure if this should even be there? If so, should it just go over all viewlayers and build these?

in a release build you can continue to enter a RNA path (e.g. "camera" or "use_audio"), but you are then getting something like:
add_relation(RNA Target -> Driver) - Could not find op_from (RnaPathKey(id: SCScene, prop: '<No Prop>'))
add_relation(RNA Target -> Driver) - Could not find op_from (RnaPathKey(id: SCScene, prop: 'use_audio'))

So, not sure if this should/could be supported?
If not, maybe this should be excluded from the UI to choose from?

**System Information** Operating system: fedora 29 Graphics card: 970m **Blender Version** Broken: a1ae04d15a Worked: old dependency graph **Short description of error** Seems like drivers cannot use a scene property. (spotted while looking into blender/blender-addons#60986 -- Import Images as planes Addon creates a driver using the scenes camera as variable) **Exact steps for others to reproduce the error** with the default scene open: - select the cube - RMB on any property in the Properties Editor: `Add Driver` - in the following popup: set `Driver variable type` to `Single Property` - set `Type of ID-Block` to `Scene` - pick a scene from the list should assert then (Debug build) `BLI_assert failed: /blender/source/blender/depsgraph/intern/builder/deg_builder_nodes.cc:497, build_id(), at '!"Should never happen"'` there is no such thing as build_scene() for a scene ID, and I am not sure if this should even be there? If so, should it just go over all viewlayers and build these? in a release build you can continue to enter a RNA path (e.g. "camera" or "use_audio"), but you are then getting something like: `add_relation(RNA Target -> Driver) - Could not find op_from (RnaPathKey(id: SCScene, prop: '<No Prop>'))` `add_relation(RNA Target -> Driver) - Could not find op_from (RnaPathKey(id: SCScene, prop: 'use_audio'))` So, not sure if this should/could be supported? If not, maybe this should be excluded from the UI to choose from?
Author
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk

#62272 was marked as duplicate of this issue

#62272 was marked as duplicate of this issue
Sergey Sharybin was assigned by Philipp Oeser 2019-01-30 13:03:24 +01:00
Author
Member

Added subscriber: @Sergey

Added subscriber: @Sergey
Author
Member

@Sergey: mind sharing your wisdom?

@Sergey: mind sharing your wisdom?
Member

Added subscribers: @ArmandoTello, @capnm, @ZedDB, @mont29

Added subscribers: @ArmandoTello, @capnm, @ZedDB, @mont29

This issue was referenced by 0ec6fa782b

This issue was referenced by 0ec6fa782b63a05e52df2d013ffbf547b178ffd1

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#61014
No description provided.