source/blender/depsgraph/intern/builder/deg_builder_nodes_view_layer.cc
@@ -157,7 +157,7 @@ void DepsgraphNodeBuilder::build_view_layer(Scene *scene,
       OperationCode::VIEW_LAYER_EVAL,
       function_bind(BKE_layer_eval_view_layer_indexed, _1, scene_cow, view_layer_index_));
   /* Parameters evaluation for scene relations mainly. */
-  add_operation_node(&scene->id, NodeType::PARAMETERS, OperationCode::SCENE_EVAL);
+  build_scene_parameters(scene);
   /* Build all set scenes. */
   if (scene->set != NULL) {
     ViewLayer *set_view_layer = BKE_view_layer_default_render(scene->set);
